feat: add card sections to blood donation

--- a/public/locales/en-GB/dashboard-blood-donation.json
+++ b/public/locales/en-GB/dashboard-blood-donation.json
@@ -6,8 +6,8 @@
         "description": "Blood compromises 3 main components - red blood cells, platelets, and plasma. Although plasma can be stored for up to 3 years, red blood cells can be only stored for up to 42 days, and platelets only for up to 5 days. Therefore, it is vital to maintain a high and stable level of blood donations; when blood donation activity is low or volatile, healthcare services that depend upon blood transfusions may be negatively affected."
     },
     "section_2": {
-        "title": "",
-        "description": ""
+        "title": "How do blood donor rates differ across the country?",
+        "description": "This data shows the % of the population aged 17-65 in each state which has donated at least once in the past year. \n\n The data for W.P. Kuala Lumpur may be higher than the true donor rate (and Selangor lower) due to data from the National Blood Centre's mobile campaigns around Selangor and W.P. Putrajaya being recorded as data for W.P. Kuala Lumpur."
     },
     "section_3": {
         "title": "A breakdown of donations by key variables",
