--- a/public/locales/ms-MY/common.json
+++ b/public/locales/ms-MY/common.json
@@ -73,7 +73,8 @@
         "financial_sector": "Sektor Kewangan",
         "social": "Sosial",
         "national_accounts": "Akaun Kebangsaan",
-        "high_frequency": "Data Kekerapan Tinggi"
+        "high_frequency": "Data Kekerapan Tinggi",
+        "healthcare": "Program Kesihatan"
       },
       "dashboards": {
         "kawasanku": "Kawasanku",
@@ -93,7 +94,8 @@
         "crime": "Jenayah Kekerasan & Harta Benda",
         "drug": "Penagihan Dadah",
         "exchange_rate": "Kadar Pertukaran",
-        "daily_price": "Daily Prices"
+        "daily_price": "Harga Harian",
+        "blood_donation": "Pendermaan Darah"
       }
     },
     "about": "Tentang",
