--- a/public/locales/ms-MY/common.json
+++ b/public/locales/ms-MY/common.json
@@ -96,7 +96,8 @@
         "drug": "Penagihan Dadah",
         "exchange_rate": "Kadar Pertukaran",
         "daily_price": "Harga Harian",
-        "blood_donation": "Pendermaan Darah"
+        "blood_donation": "Pendermaan Darah",
+        "birthday_popularity": "Populariti Hari Jadi"
       }
     },
     "about": "Tentang",
