--- a/public/locales/en-GB/dashboard-name-popularity.json
+++ b/public/locales/en-GB/dashboard-name-popularity.json
@@ -1,5 +1,5 @@
 {
     "header": "How popular is your name?",
-    "description": "Memperkenalkan Pemeriksa Kepopularan Nama untuk Malaysia! Alat unik ini membolehkan anda mengesan kepopularan nama anda di Malaysia selama 66 tahun sejak kemerdekaan negara pada tahun 1957. Dengan papan pemuka ini, anda boleh memasukkan nama anda dan mendapatkan laporan menyeluruh yang menunjukkan trend kepopularan nama anda di Malaysia dari tahun ke tahun.",
-    "bar_title": "There are {{ total }} living Malaysians with the first name \"{{ name }}\""
+    "description": "Introducing the Name Popularity Checker for Malaysia! This unique tool allows you to track the popularity of your name in Malaysia over the past 66 years since the country's independence in 1957. With this dashboard, you can input your name and get a comprehensive report that shows the trend of your name's popularity in Malaysia over the years.",
+    "bar_title": "There are {{ total }} living Malaysians with the {{ type }} name "
 }
