--- a/public/locales/ms-MY/common.json
+++ b/public/locales/ms-MY/common.json
@@ -130,7 +130,7 @@
   },
   "home": {
     "title": "Data: Asas kepada pentadbiran cekap",
-    "description": "data.gov.my adalah platform yang mengkatalog, memberi visualisasi, dan menganalisis pelbagai jenis data daripada Jabatan Perangkaan Malaysia. Segala data yang dipaparkan di platform ini adalah sumber terbuka dan percuma demi manfaat negara. Jika data itu minyak yang baru, maka keterbukaan itulah saluran yang memaksimumkan kegunaannya.",
+    "description": "data.gov.my adalah platform yang mengkatalog, memberi visualisasi, dan menganalisis pelbagai jenis data daripada pelbagai agensi kerajaan dan negeri Malaysia. Segala data yang dipaparkan di platform ini adalah sumber terbuka dan percuma demi manfaat negara. Jika data itu minyak yang baru, maka keterbukaan itulah saluran yang memaksimumkan kegunaannya.",
     "section_1": {
       "title": "Malaysia secara Sepintas Lalu",
       "stats": {
