--- a/public/locales/en-GB/dashboard-birthday-popularity.json
+++ b/public/locales/en-GB/dashboard-birthday-popularity.json
@@ -1,4 +1,22 @@
 {
   "header": "How popular is your birthday?",
-  "description": "Introducing the Birthday Popularity Checker for Malaysia! This unique tool allows you to track the popularity of your name in Malaysia over the past 66 years since the country's independence in 1957. With this dashboard, you can input your name and get a comprehensive report that shows the trend of your name's popularity in Malaysia over the years. You can see how your name fared in different decades and compare it with other popular names during that time."
+  "description": "Introducing the Birthday Popularity Checker for Malaysia!",
+  "search": "Search Birthday",
+  "enter_birthday": "Enter your birthday",
+  "choose_state": "Choose state (optional)",
+  "privacy": "We do not store your input - only you can see your search.",
+  "start_search": "Start searching for your birthday.",
+  "section_1": {
+    "age": "You are {{ age }} old",
+    "info1": "On your birthday, there were ",
+    "info2": " babies born in ",
+    "info3": ", and ",
+    "info4": " babies born nationwide, including you! Your birthday is the ",
+    "info5": " most popular out of 366 dates. The most popular is 1st January, while the most rare is 29th February.",
+    "info6": "Use the time series chart below to explore how the popularity of birthdays has changed over the years."
+  },
+  "section_2": {
+    "title": "Number of babies born on each date, {{ start_year }} to {{ end_year }}",
+    "births": "Births"
+  }
 }
