fix: default state "mys" and add future date check

--- a/public/locales/ms-MY/dashboard-birthday-popularity.json
+++ b/public/locales/ms-MY/dashboard-birthday-popularity.json
@@ -13,7 +13,8 @@
     "info3": "",
     "info4": "",
     "info5": "",
-    "info6": ""
+    "info6": "",
+    "info7": ""
   },
   "section_2": {
     "title": "Jumlah orang yang dilahirkan pada setiap hari",
