--- a/public/locales/en-GB/dashboard-birthday-popularity.json
+++ b/public/locales/en-GB/dashboard-birthday-popularity.json
@@ -11,9 +11,10 @@
     "info1": "On your birthday, there were ",
     "info2": " babies born in ",
     "info3": ", and ",
-    "info4": " babies born nationwide, including you! Your birthday is the ",
-    "info5": " most popular out of 366 dates. The most popular is 1st January, while the most rare is 29th February.",
-    "info6": "Use the time series chart below to explore how the popularity of birthdays has changed over the years."
+    "info4": " babies born nationwide",
+    "info5": ", including you! Your birthday is the ",
+    "info6": " most popular out of 366 dates. The most popular is 1st January, while the most rare is 29th February.",
+    "info7": "Use the time series chart below to explore how the popularity of birthdays has changed over the years."
   },
   "section_2": {
     "title": "Number of babies born on each date, {{ start_year }} to {{ end_year }}",
