--- a/public/locales/ms-MY/dashboard-birthday-popularity.json
+++ b/public/locales/ms-MY/dashboard-birthday-popularity.json
@@ -18,6 +18,9 @@
   },
   "section_2": {
     "title": "Jumlah orang yang dilahirkan pada setiap hari",
+    "same_year": "",
+    "description": "",
+    "desc_sameyear": "",
     "births": "Kelahiran"
   }
 }
