fix: logic issues and polish design

--- a/public/locales/ms-MY/dashboard-birthday-popularity.json
+++ b/public/locales/ms-MY/dashboard-birthday-popularity.json
@@ -7,18 +7,25 @@
   "privacy": "",
   "start_search": "",
   "section_1": {
-    "age": "Anda berumur {{ age }}",
-    "info1": "",
-    "info2": "",
-    "info3": "",
-    "info4": "",
-    "info5": "",
+    "age": "Anda berumur {{ years }} tahun, {{ months }} bulan and {{ days }} hari",
+    "info1_one": "",
+    "info1_other": "",
+    "count1": "{{ count, number }}",
+    "info2_one": "  ",
+    "info2_other": "  ",
+    "info3": ", dan ",
+    "count2": "{{ count, number }}",
+    "info4_one": " ",
+    "info4_other": " ",
+    "info5": ", termasuk anda!",
     "info6": "",
-    "info7": ""
+    "info7": "",
+    "info8": "",
+    "info9": ""
   },
   "section_2": {
-    "title": "Jumlah orang yang dilahirkan pada setiap hari",
-    "same_year": "",
+    "title": "{{ state }}: Jumlah orang yang dilahirkan pada setiap hari, dari {{ start_year }} ke {{ end_year }}",
+    "same_year": "{{ state }}: Jumlah orang yang dilahirkan pada setiap hari dalam tahun {{ year }}",
     "description": "",
     "desc_sameyear": "",
     "births": "Kelahiran"
