--- a/public/locales/en-GB/dashboard-birthday-popularity.json
+++ b/public/locales/en-GB/dashboard-birthday-popularity.json
@@ -8,17 +8,25 @@
   "start_search": "Start searching for your birthday.",
   "section_1": {
     "age": "You are {{ years }} years, {{ months }} months and {{ days }} days old",
-    "info1": "On your birthday, there were ",
-    "info2": " babies born in ",
+    "info1_one": "On your birthday, there was ",
+    "info1_other": "On your birthday, there were ",
+    "count1": "{{ count, number }}",
+    "info2_one": " baby born in ",
+    "info2_other": " babies born in ",
     "info3": ", and ",
-    "info4": " babies born nationwide",
-    "info5": ", including you! Your birthday is the ",
-    "info6": " most popular out of 366 dates. The most popular is 1st January, while the most rare is 29th February.",
-    "info7": "Use the time series chart below to explore how the popularity of birthdays has changed over the years."
+    "count2": "{{ count, number }}",
+    "info4_one": " baby born nationwide",
+    "info4_other": " babies born nationwide",
+    "info5_one": ", which is you!",
+    "info5_other": ", including you!",
+    "info6": "Your birthday is the ",
+    "info7": "{{ rank }}{{ suffix }}",
+    "info8": " most popular out of 366 dates. The most popular is {{ popular }}, while the most rare is {{ rare }}.",
+    "info9": "Use the time series chart below to explore how the popularity of birthdays has changed over the years."
   },
   "section_2": {
-    "title": "Number of babies born on each date, {{ start_year }} to {{ end_year }}",
-    "sameyear": "Number of babies born on each date in {{ year }}",
+    "title": "{{ state }}: Number of babies born on each date, {{ start_year }} to {{ end_year }}",
+    "sameyear": "{{ state }}: Number of babies born on each date in {{ year }}",
     "description": "Note: There are no births on 29 Feb because there are no leap years between {{ start_year }} and {{ end_year }}.",
     "desc_sameyear": "Note: There are no births on 29 Feb because there are no leap years in {{ year }}.",
     "births": "Births"
