fix: overseas summary

--- a/public/locales/en-GB/dashboard-birthday-popularity.json
+++ b/public/locales/en-GB/dashboard-birthday-popularity.json
@@ -13,6 +13,9 @@
     "count1": "{{ count, number }}",
     "info2_one": " baby born in ",
     "info2_other": " babies born in ",
+    "info2_overseas_one": " Malaysian baby born ",
+    "info2_overseas_other": " Malaysian babies born ",
+    "overseas": "Overseas",
     "info3": ", and ",
     "count2": "{{ count, number }}",
     "info4_one": " baby born nationwide",
