--- a/public/locales/ms-MY/dashboard-birthday-popularity.json
+++ b/public/locales/ms-MY/dashboard-birthday-popularity.json
@@ -13,6 +13,9 @@
     "count1": "{{ count, number }}",
     "info2_one": "  ",
     "info2_other": "  ",
+    "info2_overseas_one": "  ",
+    "info2_overseas_other": "  ",
+    "overseas": "",
     "info3": ", dan ",
     "count2": "{{ count, number }}",
     "info4_one": " ",
