--- a/public/locales/en-GB/dashboard-name-popularity.json
+++ b/public/locales/en-GB/dashboard-name-popularity.json
@@ -4,8 +4,10 @@
     "bar_title_one": "There is {{count, number}} living Malaysian with the {{ type }} name ",
     "bar_title_other": "There are {{count, number}} living Malaysians with the {{ type }} name ",
     "validation_text": "Time series data for this name is not made available, because there are too few Malaysians with the {{ type }} name: {{ name }}. Try again!",
+    "section1_title": "How popular is your name?",
     "search_prompt": "Start search for name to see your name popularity!",
     "search_button": "Search name",
+    "section2_title": "Compare your name against your friends and family!",
     "compare_title": "Comparing Popular Names",
     "compare_radio": "Compare up to 10 names (separate by comma)",
     "table_name": "Name",
