feat: 34 base dashboards

--- a/public/locales/ms-MY/common.json
+++ b/public/locales/ms-MY/common.json
@@ -107,6 +107,7 @@
     "open_source": "Sumber Terbuka",
     "frontend": "Repo 'Frontend': NextJS",
     "backend": "Repo 'Backend': Django",
+    "uiux": "Reka Bentuk UI + UX: Figma",
     "mampu": "MAMPU",
     "open_data": "Data Terbuka",
     "public_open_data": "Data Terbuka Sektor Awam",
