--- a/public/locales/en-GB/common.json
+++ b/public/locales/en-GB/common.json
@@ -107,6 +107,7 @@
     "open_source": "Open Source",
     "frontend": "Frontend Repo: NextJS",
     "backend": "Backend Repo: Django",
+    "uiux": "UI + UX Design: Figma",
     "mampu": "MAMPU",
     "open_data": "Open Data",
     "public_open_data": "Public Sector Open Data",
