--- a/public/locales/ms-MY/dashboard-name-popularity.json
+++ b/public/locales/ms-MY/dashboard-name-popularity.json
@@ -1,5 +1,29 @@
 {
-    "header": "Berapakah populariti nama anda?",
-    "description": "Memperkenalkan Pemeriksa Kepopularan Nama untuk Malaysia! Alat unik ini membolehkan anda mengesan kepopularan nama anda di Malaysia selama 66 tahun sejak kemerdekaan negara pada tahun 1957. Dengan papan pemuka ini, anda boleh memasukkan nama anda dan mendapatkan laporan menyeluruh yang menunjukkan trend kepopularan nama anda di Malaysia dari tahun ke tahun.",
-    "bar_title": "There are {{ total }} living Malaysians with the first name \"{{ name }}\""
+    "header": "Kepopularan Nama Bayi",
+    "description": "Adakah anda ingin tahu betapa popularnya nama atau nama keluarga anda di Malaysia? Atau mungkin anda seorang ibu bapa yang mencari nama yang unik untuk anak anda? Papan pemuka populariti nama kami membolehkan anda meneroka populariti mana-mana nama atau nama keluarga Malaysia dengan hanya beberapa klik. Dengan menggunakan pangkalan data IC standard emas Malaysia, anda boleh mengetahui berapa ramai rakyat Malaysia yang berkongsi nama anda dan mendapat wawasan yang menarik tentang budaya yang pelbagai di negara ini. Semak sekarang dan puaskan rasa ingin tahu anda!",
+    "bar_title_one": "Ada {{count, number}} rakyat Malaysia yang hidup dengan nama {{ type }} ",
+    "bar_title_other": "Terdapat {{count, number}} rakyat Malaysia yang hidup dengan nama {{ type }} ",
+    "bar_description": "Berikut adalah jumlah bayi yang diberi nama {{ name }} setiap tahun:",
+    "validation_text": "Data siri masa untuk nama ini tidak disediakan kerana terlalu sedikit rakyat Malaysia yang mempunyai nama {{ type }}: {{ name }}. Cuba lagi!",
+    "first_name": "Nama Pertama",
+    "last_name": "Nama Keluarga",
+    "section1_title": "Betapa popularnya nama anda?",
+    "search_prompt": "Mula carian nama untuk melihat populariti nama anda!",
+    "search_button": "Cari nama",
+    "search_radio_label": "Cari Untuk:",
+    "search_details": "Data di sebalik papan pemuka ini tidak mengandungi sebarang nama penuh. Anda hanya boleh mencari nama pertama anda (contohnya Anwar, Azizah) atau nama keluarga anda (contohnya Loke, Veerapan).",
+    "search_disclaimer": "Kami tidak menyimpan input anda - hanya anda yang dapat melihat carian anda.",
+    "search_validation_first": "Sila masukkan nama pertama anda",
+    "search_validation_last": "Sila masukkan nama keluarga anda",
+    "section2_title": "Bandingkan nama anda dengan kawan dan keluarga anda!",
+    "compare_title": "Mengkaji Nama Populer",
+    "compare_radio": "Bandingkan sehingga 10 nama (asingkan dengan koma)",
+    "compare_validation": "Sila masukkan lebih daripada satu nama",
+    "table_name": "Nama",
+    "table_total": "Jumlah Rakyat Malaysia",
+    "table_most_popular": "Paling popular pada dekad",
+    "table_least_popular": "Paling kurang popular pada dekad",
+    "compare_button": "Bandingkan nama",
+    "compare_prompt": "Mula masukkan nama untuk membandingkan populariti!",
+    "compare_toggle": "Susun mengikut Populariti"
 }
