fix: update section 2 table title

--- a/public/locales/en-GB/dashboard-name-popularity.json
+++ b/public/locales/en-GB/dashboard-name-popularity.json
@@ -18,7 +18,7 @@
     "search_validation_first": "Please enter your first name",
     "search_validation_last": "Please enter your last name",
     "section2_title": "Compare your name against your friends and family!",
-    "compare_title": "Comparing Popular Names",
+    "compare_title": "Name ranking",
     "compare_radio": "Compare up to 10 names (separate by comma)",
     "compare_validation": "Please enter more than one name",
     "table_name": "Name",
