--- a/public/locales/ms-MY/dashboard-name-popularity.json
+++ b/public/locales/ms-MY/dashboard-name-popularity.json
@@ -18,7 +18,7 @@
     "search_validation_first": "Sila masukkan nama pertama anda",
     "search_validation_last": "Sila masukkan nama keluarga anda",
     "section2_title": "Bandingkan nama anda dengan kawan dan keluarga anda!",
-    "compare_title": "Mengkaji Nama Populer",
+    "compare_title": "Kedudukan Nama",
     "compare_radio": "Bandingkan sehingga 10 nama (asingkan dengan koma)",
     "compare_validation": "Sila masukkan lebih daripada satu nama",
     "table_name": "Nama",
