--- a/public/locales/ms-MY/dashboard-birthday-popularity.json
+++ b/public/locales/ms-MY/dashboard-birthday-popularity.json
@@ -1,6 +1,8 @@
 {
   "header": "Populariti Hari Jadi",
   "description": "Papan pemuka ini",
+  "quote": "",
+  "description2": "",
   "search": "",
   "enter_birthday": "Pilih Hari Jadi anda",
   "choose_state": "Pilih negeri (tidak wajib)",
