fix: birthday explorer translations

--- a/public/locales/en-GB/dashboard-birthday-explorer.json
+++ b/public/locales/en-GB/dashboard-birthday-explorer.json
@@ -15,21 +15,21 @@
     "age": "You are {{ years }} years, {{ months }} months and {{ days }} days old",
     "info1_one": "On your birthday, there was ",
     "info1_other": "On your birthday, there were ",
-    "count1": "{{ count, number }}",
+    "state_count": "{{ count, number }}",
     "info2_one": " baby born in ",
     "info2_other": " babies born in ",
     "info2_overseas_one": " Malaysian baby born ",
     "info2_overseas_other": " Malaysian babies born ",
     "overseas": "Overseas",
     "info3": ", and ",
-    "count2": "{{ count, number }}",
+    "nation_count": "{{ count, number }}",
     "info4_one": " baby born nationwide",
     "info4_other": " babies born nationwide",
     "info5_one": ", which is you!",
     "info5_other": ", including you!",
     "info6": "In {{ year }}, your birthday was the ",
-    "info7": "{{ rank }}{{ suffix }}",
-    "info8": " most popular out of 366 dates. The most popular was {{ popular }}, while the most rare was {{ rare }}.",
+    "rank": "{{ rank }}{{ suffix }}",
+    "popularity": " most popular out of {{ count }} dates. The most popular was {{ year_popular }}, while the most rare was {{ year_rare }}.",
     "explore": "Use the time series chart below to explore how the popularity of birthdays has changed over the years."
   },
   "section_2": {
