--- a/public/locales/ms-MY/common.json
+++ b/public/locales/ms-MY/common.json
@@ -99,7 +99,7 @@
         "exchange_rate": "Kadar Pertukaran",
         "daily_price": "Harga Harian",
         "blood_donation": "Pendermaan Darah",
-        "birthday_explorer": "Explorer Hari Jadi",
+        "birthday_explorer": "Explorer Hari Lahir",
         "name_popularity": "Popularity Nama"
       }
     },
@@ -347,7 +347,7 @@
     "header_3": "Penerbitan berdasarkan data ini",
     "meta_desc": "Penerangan dataset",
     "meta_def": "Definisi pembolehubah",
-    "meta_chart_above": "(Carta d iatas)",
+    "meta_chart_above": "(Carta di atas)",
     "meta_all_dataset": "Dalam keseluruhan dataset:",
     "meta_variable": "Pembolehubah",
     "meta_variable_name": "Nama pembolehubah",
