--- a/public/locales/ms-MY/dashboard-birthday-explorer.json
+++ b/public/locales/ms-MY/dashboard-birthday-explorer.json
@@ -1,43 +1,39 @@
 {
-  "header": "Populariti Hari Jadi",
-  "description": "Papan pemuka ini",
-  "quote": "",
-  "search": "",
-  "enter_birthday": "Pilih Hari Jadi anda",
+  "header": "Explorer Hari Lahir",
+  "description": "Mark Twain pernah berkata bahawa <i>{{ quote }}</i>. Namun begitu, laman web ini tidak mampu memberikan makna kehidupan kepada anda, lagipun, kita cuma sebuah laman web data. Tetapi, apa yang kita boleh buat ialah memberi konteks kepada hari lahir anda yang berasaskan data. Berapakah orang yang mempunyai hari lahir yang sama dengan anda? Bulan apakah yang paling popular untuk beranak? Hari apakah yang paling istimewa sepanjang tahun? Cubalah terokai data tersebut di bawah!",
+  "quote": "“Dua hari yang paling penting dalam kehidupan kita ialah hari kita dilahirkan bersama dengan hari kita memahami makna kehidupan”",
+  "search": "Cari Hari Lahir",
+  "enter_birthday": "Pilih Hari Lahir anda",
   "choose_state": "Pilih negeri (tidak wajib)",
-  "disclaimer": "",
-  "start_search": "",
+  "disclaimer": "Laman web ini tidak menyimpan data anda.",
+  "start_search": "Sila mulakan pencarian anda.",
   "section_1": {
-    "title": "",
+    "title": "Betapa popularnya hari lahir anda?",
     "validation_incomplete": "Tarikh yand diisi tidak lengkap. Sila isikan tarikh yang lengkap.",
     "validation_min": "Sila isikan tarikh selepas 1 Jan 1923",
     "validation_max": "Sila isikan tarikh sebelum 31 Dis 2017",
-    "age": "Anda berumur {{ years }} tahun, {{ months }} bulan and {{ days }} hari",
-    "info1_one": "",
-    "info1_other": "",
-    "count1": "{{ count, number }}",
-    "info2_one": "  ",
-    "info2_other": "  ",
-    "info2_overseas_one": "  ",
-    "info2_overseas_other": "  ",
-    "overseas": "",
-    "info3": ", dan ",
-    "count2": "{{ count, number }}",
-    "info4_one": " ",
-    "info4_other": " ",
+    "age": "Anda berumur {{ years }} tahun, {{ months }} bulan dan {{ days }} hari",
+    "info1": "Pada hari lahir anda, sebanyak ",
+    "state_count": "{{ count, number }}",
+    "info2": " bayi telah dilahirkan di ",
+    "info2_overseas": " bayi telah dilahirkan di ",
+    "overseas": " luar negara",
+    "info3": ", dan sebanyak ",
+    "nation_count": "{{ count, number }}",
+    "info4": " bayi yang dilahirkan seluruh negara",
     "info5": ", termasuk anda!",
-    "info6": "",
-    "info7": "",
-    "info8": "",
-    "explore": ""
+    "info6": "Pada tahun {{ year }}, hari lahir anda merupakan hari lahir ",
+    "rank": "ke-{{ rank }}",
+    "popularity": " paling popular daripada {{ count }} hari. Hari yang paling popular ialah {{ year_popular }}, sebaliknya hari yang paling jarang ialah {{ year_rare }}.",
+    "explore": "Cubalah gunakan carta di bawah untuk menerokai bagaimana populariti hari lahir telah berubah sejak tahun 1923."
   },
   "section_2": {
-    "title": "{{ state }}: Jumlah orang yang dilahirkan pada setiap hari, dari {{ start_year }} ke {{ end_year }}",
-    "same_year": "{{ state }}: Jumlah orang yang dilahirkan pada setiap hari dalam tahun {{ year }}",
-    "description": "",
-    "desc_sameyear": "",
-    "by_date": "",
-    "by_month": "",
+    "title": "{{ state }}: Jumlah bayi yang dilahirkan pada setiap tarikh, dari tahun {{ start_year }} ke {{ end_year }}",
+    "same_year": "{{ state }}: Jumlah bayi yang dilahirkan pada setiap tarikh dalam tahun {{ year }}",
+    "description": "Nota: Tiada kelahiran pada 29hb Februari kerana tiada tahun lompat dari tahun {{ start_year }} ke {{ end_year }} ",
+    "desc_sameyear": "Nota: Tiada kelahiran pada 29hb Februari kerana tiada tahun lompat dalam tahun {{ year }}",
+    "by_date": "Mengikut tarikh",
+    "by_month": "Mengikut bulan",
     "births": "Kelahiran"
   }
 }
